<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.greendaodemo.activity.MainActivity">

    <!--添加信息-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_app_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_12"
            android:paddingRight="@dimen/dp_12">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/main_user_name"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:hint="@string/main_hint_name"
                android:inputType="text"
                android:lines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_12"
            android:paddingRight="@dimen/dp_12">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/main_user_sex"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:hint="@string/main_hint_sex"
                android:inputType="text"
                android:lines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_12"
            android:paddingRight="@dimen/dp_12">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/main_user_address"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:hint="@string/main_hint_address"
                android:inputType="text"
                android:lines="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/dp_12"
            android:paddingRight="@dimen/dp_12">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/main_user_desc"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/et_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:hint="@string/main_hint_desc"
                android:inputType="text"
                android:lines="1" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp_16">

        <Button
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_add" />

        <Button
            android:id="@+id/btn_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_toRightOf="@+id/btn_add"
            android:text="@string/all_display" />
    </RelativeLayout>
</LinearLayout>
