<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/dp_4"
    android:layout_marginRight="@dimen/dp_4"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="4dp"
    app:cardElevation="2dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dp_8">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:textColor="@android:color/black"
                tools:text="@string/main_user_name_" />

            <ImageView
                android:id="@+id/iv_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_12"
                android:src="@drawable/tm_interfun_ic_avatar_default" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_item_sex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_4"
            tools:text="@string/main_user_sex_" />

        <TextView
            android:id="@+id/tv_item_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:paddingTop="@dimen/dp_4"
            tools:text="@string/main_user_address_" />

        <TextView
            android:id="@+id/tv_item_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_8"
            android:paddingTop="@dimen/dp_4"
            android:scrollHorizontally="true"
            tools:text="@string/main_user_desc_" />

    </LinearLayout>


</android.support.v7.widget.CardView>